[package]
name = "sctf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
jsonwebtoken = "9.3.1"
nanoid = "0.4.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
toml = "0.8.20"
tracing = "0.1.41"
