[package]
name = "sctf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
envconfig = "0.11.0"
eyre = "0.6.12"
jsonwebtoken = "9.3.1"
nanoid = "0.4.0"
pretty_env_logger = "0.5.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
toml = "0.8.20"
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }
