[package]
name = "sctf-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
deployer-common = { path = "../deployer-common", package = "sctf-deployer-common" }
dialoguer = "0.11.0"
eyre = "0.6.12"
rustyline = "16.0.0"
toml = "0.8.23"
walkdir = "2.5.0"
