[package]
name = "sctf-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.0"
clap = { version = "4.5.40", features = ["derive"] }
deployer-common = { path = "../deployer-common", package = "sctf-deployer-common" }
dialoguer = "0.11.0"
eyre = "0.6.12"
rayon = "1.10.0"
rustyline = "16.0.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
walkdir = "2.5.0"
