[package]
name = "sctf-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.0"
clap = { version = "4.5.40", features = ["derive"] }
deployer-common = { path = "../deployer-common", package = "sctf-deployer-common" }
dialoguer = "0.11.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.27"
rayon = "1.10.0"
reqwest = "0.12.20"
rustyline = "16.0.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
walkdir = "2.5.0"
