[package]
name = "sctf-deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.0"
eyre = "0.6.12"
futures-util = "0.3.31"
glob = "0.3.2"
log = { version = "0.4.27", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tempdir = "0.3.7"
tokio = { version = "1.45.1", features = ["fs", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = "0.8.23"
